--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -69,6 +69,11 @@ service vm_bms /system/bin/vm_bms
     user root
     group root
 
+service mpdecision /system/bin/mpdecision --avg_comp
+    class late_start
+    user root
+    group system
+
 on charger
    wait /dev/block/bootdevice/by-name/system
    mount ext4 /dev/block/bootdevice/by-name/system /system ro barrier=1
