--- a/gps/gps.conf
+++ b/gps/gps.conf
@@ -76,8 +76,8 @@ CAPABILITIES=0x37
 ################################
 
 # FOR SUPL SUPPORT, set the following
-# SUPL_HOST=supl.host.com or IP
-# SUPL_PORT=1234
+SUPL_HOST=supl.google.com
+SUPL_PORT=7276
 
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
@@ -98,7 +98,7 @@ CAPABILITIES=0x37
 # 1: Enable LPP_User_Plane on LTE
 # 2: Enable LPP_Control_Plane
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
-LPP_PROFILE = 3
+LPP_PROFILE = 2
 
 ################################
 # EXTRA SETTINGS
